@@ -3,76 +3,76 @@
 
 after_everything do
   say_wizard "recipe running after everything"
-  ### CONFIGURATION FILE ###
-  ## EMAIL
   case prefs[:email]
     when 'none'
-      credentials = ''
+      secrets_d_email = secrets_p_email = foreman_email = ''
     when 'smtp'
-      credentials = ''
+      secrets_d_email = foreman_email = ''
     when 'gmail'
-      credentials = "GMAIL_USERNAME: Your_Username\nGMAIL_PASSWORD: Your_Password\n"
+      secrets_d_email = "  gmail_username: Your_Username\n  gmail_password: Your_Password\n"
+      secrets_p_email = "  gmail_username: <%= ENV[\"GMAIL_USERNAME\"] %>\n  gmail_password: <%= ENV[\"GMAIL_PASSWORD\"] %>\n"
+      foreman_email = "GMAIL_USERNAME=Your_Username\nGMAIL_PASSWORD=Your_Password\n"
     when 'sendgrid'
-      credentials = "SENDGRID_USERNAME: Your_Username\nSENDGRID_PASSWORD: Your_Password\n"
+      secrets_d_email = "  sendgrid_username: Your_Username\n  sendgrid_password: Your_Password\n"
+      secrets_p_email = "  sendgrid_username: <%= ENV[\"SENDGRID_USERNAME\"] %>\n  sendgrid_password: <%= ENV[\"SENDGRID_PASSWORD\"] %>\n"
+      foreman_email = "SENDGRID_USERNAME=Your_Username\nSENDGRID_PASSWORD=Your_Password\n"
     when 'mandrill'
-      credentials = "MANDRILL_USERNAME: Your_Username\nMANDRILL_APIKEY: Your_API_Key\n"
+      secrets_d_email = "  mandrill_username: Your_Username\n  mandrill_apikey: Your_API_Key\n"
+      secrets_p_email = "  mandrill_username: <%= ENV[\"MANDRILL_USERNAME\"] %>\n  mandrill_apikey: <%= ENV[\"MANDRILL_APIKEY\"] %>\n"
+      foreman_email = "MANDRILL_USERNAME=Your_Username\nMANDRILL_APIKEY=Your_API_Key\n"
   end
-  append_file 'config/application.yml', credentials if prefer :local_env_file, 'figaro' and not rails_4_1?
-  append_file '.env', credentials.gsub(': ', '=') if prefer :local_env_file, 'foreman'
-  if prefer :local_env_file, 'figaro'
-    ## DEFAULT USER
-    unless prefer :starter_app, false
-      append_file 'config/application.yml' do <<-FILE
-ADMIN_NAME: First User
-ADMIN_EMAIL: user@example.com
-ADMIN_PASSWORD: changeme
-FILE
-      end
-    end
-    ## AUTHENTICATION
-    if prefer :authentication, 'omniauth'
-      append_file 'config/application.yml' do <<-FILE
-OMNIAUTH_PROVIDER_KEY: Your_OmniAuth_Provider_Key
-OMNIAUTH_PROVIDER_SECRET: Your_OmniAuth_Provider_Secret
-FILE
-      end
-    end
-    ## AUTHORIZATION
-    if (prefer :authorization, 'cancan')
-      append_file 'config/application.yml', "ROLES: [admin, user, VIP]\n"
-    end
-  elsif prefer :local_env_file, 'foreman'
-    ## DEFAULT USER
-    unless prefer :starter_app, false
-      append_file '.env' do <<-FILE
-ADMIN_NAME=First User
-ADMIN_EMAIL=user@example.com
-ADMIN_PASSWORD=changeme
-FILE
-      end
-    end
-    ## AUTHENTICATION
-    if prefer :authentication, 'omniauth'
-      append_file '.env' do <<-FILE
-OMNIAUTH_PROVIDER_KEY=Your_OmniAuth_Provider_Key
-OMNIAUTH_PROVIDER_SECRET=Your_OmniAuth_Provider_Secret
-FILE
-      end
-    end
-    ## AUTHORIZATION
-    if (prefer :authorization, 'cancan')
-      append_file '.env', "ROLES=[admin, user, VIP]\n"
-    end
+  figaro_email  = foreman_email.gsub('=', ': ')
+  secrets_d_devise = "  admin_name: First User\n  admin_email: user@example.com\n  admin_password: changeme\n"
+  secrets_p_devise = "  admin_name: <%= ENV[\"ADMIN_NAME\"] %>\n  admin_email: <%= ENV[\"ADMIN_EMAIL\"] %>\n  admin_password: <%= ENV[\"ADMIN_PASSWORD\"] %>\n"
+  foreman_devise = "ADMIN_NAME=First User\nADMIN_EMAIL=user@example.com\nADMIN_PASSWORD=changeme\n"
+  figaro_devise  = foreman_devise.gsub('=', ': ')
+  secrets_d_omniauth = "  omniauth_provider_key: Your_Provider_Key\n  omniauth_provider_secret: Your_Provider_Secret\n"
+  secrets_p_omniauth = "  omniauth_provider_key: <%= ENV[\"OMNIAUTH_PROVIDER_KEY\"] %>\n  omniauth_provider_secret: <%= ENV[\"OMNIAUTH_PROVIDER_SECRET\"] %>\n"
+  foreman_omniauth = "OMNIAUTH_PROVIDER_KEY: Your_Provider_Key\nOMNIAUTH_PROVIDER_SECRET: Your_Provider_Secret\n"
+  figaro_omniauth  = foreman_omniauth.gsub('=', ': ')
+  secrets_d_cancan = "  roles: [admin, user, VIP]\n" # unnecessary? CanCan will not be used with Rails 4.1?
+  secrets_p_cancan = "  roles: <%= ENV[\"ROLES\"] %>\n" # unnecessary? CanCan will not be used with Rails 4.1?
+  foreman_cancan = "ROLES=[admin, user, VIP]\n\n"
+  figaro_cancan = foreman_cancan.gsub('=', ': ')
+  ## EMAIL
+  inject_into_file 'config/secrets.yml', secrets_d_email, :after => "development:\n" if rails_4_1?
+  inject_into_file 'config/secrets.yml', secrets_p_email, :after => "production:\n" if rails_4_1?
+  append_file '.env', foreman_email if prefer :local_env_file, 'foreman'
+  append_file 'config/application.yml', figaro_email if prefer :local_env_file, 'figaro'
+  ## DEVISE
+  if prefer :authentication, 'devise'
+    inject_into_file 'config/secrets.yml', secrets_d_devise, :after => "development:\n" if rails_4_1?
+    inject_into_file 'config/secrets.yml', secrets_p_devise, :after => "production:\n" if rails_4_1?
+    append_file '.env', foreman_devise if prefer :local_env_file, 'foreman'
+    append_file 'config/application.yml', figaro_devise if prefer :local_env_file, 'figaro'
   end
-  ### SUBDOMAINS ###
+  ## OMNIAUTH
+  if prefer :authentication, 'omniauth'
+    inject_into_file 'config/secrets.yml', secrets_d_omniauth, :after => "development:\n" if rails_4_1?
+    inject_into_file 'config/secrets.yml', secrets_p_omniauth, :after => "production:\n" if rails_4_1?
+    append_file '.env', foreman_omniauth if prefer :local_env_file, 'foreman'
+    append_file 'config/application.yml', figaro_omniauth if prefer :local_env_file, 'figaro'
+  end
+  ## CANCAN
+  if (prefer :authorization, 'cancan')
+    inject_into_file 'config/secrets.yml', secrets_d_cancan, :after => "development:\n" if rails_4_1?
+    inject_into_file 'config/secrets.yml', secrets_p_cancan, :after => "production:\n" if rails_4_1?
+    append_file '.env', foreman_cancan if prefer :local_env_file, 'foreman'
+    append_file 'config/application.yml', figaro_cancan if prefer :local_env_file, 'figaro'
+  end
+  ### SUBDOMAINS (FIGARO ONLY) ###
   copy_from_repo 'config/application.yml', :repo => 'https://raw.github.com/RailsApps/rails3-subdomains/master/' if prefer :starter_app, 'subdomains_app'
-  ### APPLICATION.EXAMPLE.YML ###
+  ### EXAMPLE FILE FOR FOREMAN AND FIGARO ###
   if prefer :local_env_file, 'figaro'
     copy_file destination_root + '/config/application.yml', destination_root + '/config/application.example.yml'
   elsif prefer :local_env_file, 'foreman'
     copy_file destination_root + '/.env', destination_root + '/.env.example'
   end
   ### DATABASE SEED ###
+  if (prefer :authentication, 'devise') and (rails_4_1?)
+    copy_from_repo 'db/seeds.rb', :repo => 'https://raw.github.com/RailsApps/rails-devise/master/'
+    copy_from_repo 'app/services/create_admin_service.rb', :repo => 'https://raw.github.com/RailsApps/rails-devise/master/'
+  end
   if prefer :local_env_file, 'figaro'
     append_file 'db/seeds.rb' do <<-FILE
 # Environment variables (ENV['...']) can be set in the file config/application.yml.
@@ -109,21 +109,11 @@ FILE
     end
   end
   ## DEVISE-DEFAULT
-  if (prefer :authentication, 'devise') and (not prefer :apps4, 'rails-devise')
+  if (prefer :authentication, 'devise') and (not prefer :apps4, 'rails-devise') and (not rails_4_1?)
     append_file 'db/seeds.rb' do <<-FILE
 puts 'DEFAULT USERS'
 user = User.find_or_create_by_email :name => ENV['ADMIN_NAME'].dup, :email => ENV['ADMIN_EMAIL'].dup, :password => ENV['ADMIN_PASSWORD'].dup, :password_confirmation => ENV['ADMIN_PASSWORD'].dup
 puts 'user: ' << user.name
-FILE
-    end
-    # Mongoid doesn't have a 'find_or_create_by' method
-    gsub_file 'db/seeds.rb', /find_or_create_by_email/, 'create!' if prefer :orm, 'mongoid'
-  end
-  if prefer :apps4, 'rails-devise'
-    append_file 'db/seeds.rb' do <<-FILE
-puts 'DEFAULT USERS'
-user = User.find_or_create_by_email :email => ENV['ADMIN_EMAIL'].dup, :password => ENV['ADMIN_PASSWORD'].dup, :password_confirmation => ENV['ADMIN_PASSWORD'].dup
-puts 'user: ' << user.email
 FILE
     end
     # Mongoid doesn't have a 'find_or_create_by' method
